# mailwatch

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  flake.nix  pyproject.toml  renovate.json
.github/workflows/: ci.yml  renovate.yml
mailwatch/: __init__.py  _catalog.py  app.py  avery.py  cleanup.py  cli_resolve.py  config.py  db.py  imb.py  layouts.py  middleware.py  models.py  pdf.py  poll.py  rate_limit.py  routes.py  usps_api.py  web_lookup.py
mailwatch/avery/: __init__.py  templates.py
mailwatch/static/: style.css
mailwatch/templates/: base.html  generate.html  index.html  preview.html  tracking.html
mailwatch/templates/pdf/: avery.html  avery8163.html  envelope.html
nix/: module.nix
tests/: conftest.py  test_app.py  test_avery.py  test_cleanup.py  test_config.py  test_db.py  test_imb.py  test_layouts.py  test_models.py  test_pdf.py  test_poll.py  test_rate_limit.py  test_routes.py  test_usps_api.py  test_web_lookup.py
